# inverted-index-util

./: Cargo.toml  README.md  rustfmt.toml
benches/: document_list_insert.rs  entity_list_insert.rs
src/: document_list.rs  entity_list.rs  lib.rs
