[package]
name = "inverted-index-util"
version = "0.0.5"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"
description = "Utilities for implementing an inverted index"
keywords = [
    "inverted",
    "index",
]
categories = [
    "util",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mindbeam/inverted-index-util"

[dependencies]
typenum="1.11.2"

[dev-dependencies]
rusty_ulid = "0.9.3"
criterion = "0.3"

[[bench]]
name = "entity_list_insert"
harness = false